# ParallelTextProcessing

./: .gitignore  main.cpp
WordCounter/: CMakeLists.txt  main.cpp  recursiveDirs.cpp  recursiveDirs.hpp
WordCounter/import/: CMakeLists.txt
WordCounter/inc/: main.hpp  queue.hpp  recursiveDirs.hpp  words.hpp
WordCounter/lib/: CMakeLists.txt  queue.cpp  recursiveDirs.cpp  words.cpp
WordCounter/src/: main.cpp
WordCounterTBB/: CMakeLists.txt  example.conf
WordCounterTBB/import/libarchive/: CMakeLists.txt
WordCounterTBB/src/: main.cpp
WordCounterThreadPool/: CMakeLists.txt  example.conf  launch.py  timing.txt
WordCounterThreadPool/inc/: ThreadPool.hpp  configs.hpp  words.hpp  workers.hpp
WordCounterThreadPool/lib/: ThreadPool.cpp  words.cpp  workers.cpp
WordCounterThreadPool/src/: configs.cpp  main.cpp
